# eduhunt

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
hunt/: asgi.py  urls.py  wsgi.py
hunt/apps/auth/: apps.py  oauth.py  urls.py  views.py
hunt/apps/dashboard/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
hunt/apps/dashboard/migrations/: 0001_initial.py  0002_alter_team_members.py  0003_problem_description_problem_solved.py  0004_remove_problem_description.py  0005_remove_problem_solved_problem_solved_by.py
hunt/apps/users/: admin.py  apps.py  models.py
hunt/apps/users/migrations/: 0001_initial.py  0002_user_last_attempt.py
hunt/settings/: __init__.py
hunt/templates/: base.html  meta.html
hunt/templates/auth/: login.html
hunt/templates/dashboard/: choose-hunt.html  choose-team.html  hunt.html
